--- a/src/Components/Offers/HomeOffer.css
+++ b/src/Components/Offers/HomeOffer.css
@@ -60,7 +60,7 @@
   margin-top: 2px;
   font-weight: 400;
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
